--- a/career.html
+++ b/career.html
@@ -556,7 +556,7 @@
             <li>Портфолио/публикации приветствуются</li>
           </ul>
           <b>Условия:</b> обсуждаются индивидуально.
-          <ul>Чтобы откликнуться напишите на E-mail:<b>info@tensorlabs.ai</b> или на <b>mvlazarev@hse.ru</b> </ul>
+          <ul>Чтобы откликнуться напишите на E-mail:<b>neurofacies@gmail.com</b> или на <b>mvlazarev@hse.ru</b> </ul>
           
         </div>
       </div>  
@@ -583,7 +583,7 @@
             <li>Портфолио/публикации приветствуются</li>
           </ul>
           <b>Условия:</b> обсуждаются индивидуально.
-          <ul>Чтобы откликнуться напишите на E-mail:<b>info@tensorlabs.ai</b> или на <b>mvlazarev@hse.ru</b> </ul>
+          <ul>Чтобы откликнуться напишите на E-mail:<b>neurofacies@gmail.com</b> или на <b>mvlazarev@hse.ru</b> </ul>
         </div>
       </div>
       <img src="Vacancy2.png" alt="ML вакансии" class="vacancy-img">
@@ -610,7 +610,7 @@
             <li>Базовое понимание физики на атомарном уровне</li>
           </ul>
           <b>Условия:</b> обсуждаются индивидуально.
-          <ul>Чтобы откликнуться напишите на E-mail:<b>info@tensorlabs.ai</b> или на <b>mvlazarev@hse.ru</b> </ul>
+          <ul>Чтобы откликнуться напишите на E-mail:<b>neurofacies@gmail.com</b> или на <b>mvlazarev@hse.ru</b> </ul>
         </div>
       </div>
       <img src="Vacancy3.png" alt="ML вакансии" class="vacancy-img">
