--- a/about.html
+++ b/about.html
@@ -511,7 +511,7 @@
     <section class="section" id="about">
       <!-- Миссия -->
       <div class="section-title">Наша миссия</div>
-      <div class="section-content">
+      <div class="section-content" style="text-align:justify;">
         <b>TensorLabs</b> — команда исследователей и инженеров, создающая решения на стыке искусственного интеллекта и медицины.<br>
         <br>
         Наша миссия — сделать современные диагностические технологии доступными для каждого врача и пациента, где бы они ни находились.
