--- a/career.html
+++ b/career.html
@@ -509,9 +509,9 @@
       <a href="career.html">Карьера</a>
     </nav>
     <div class="lang-switch">
-        <a href="index.html" class="lang-link">RU</a>
+        <a href="career.html" class="lang-link">RU</a>
         <span class="lang-divider">|</span>
-        <a href="en.html" class="lang-link">EN</a>
+        <a href="en_career.html" class="lang-link">EN</a>
     </div>
     <!--<button class="header-btn">Связаться</button>1 -->
   </header>
@@ -519,7 +519,7 @@
   <main>
     <section class="section" id="careers">
       <div class="section-title">Карьера и вакансии</div>
-      <div class="section-content">
+      <div class="section-content" style="text-align:justify;">
         Мы в <b>TensorLabs</b> и в лаборатории <b>LAMBDA НИУ ВШЭ</b> ищем талантливых специалистов, которые хотят работать на стыке искусственного интеллекта, медицины и фундаментальных исследований.<br><br>
         <b>Варианты сотрудничества:</b>
         <ul>
@@ -527,7 +527,7 @@
           <li>Исследовательская деятельность, стажировка и аспирантура в лаборатории ВШЭ под руководством Михаила Лазарева</li>
         </ul>
       </div>
-      <div class="section-content">
+      <div class="section-content" style="text-align:justify;">
         В настоящий момент доступны вакансии в лаборатории <b>LAMBDA НИУ ВШЭ</b>, однако мы всегда ищем таланты, разделяющие наши взгляды и цели. В случае отсутствия вакансий в TensorLabs рекомендуем написать нам письмо и приложать резюме или рассмотреть варианты работы в ВШЭ.
         <div>
           Подробнее о лаборатории в ВШЭ можно посмотреть на сайте — <a href="https://cs.hse.ru/iai/lambda/" target="_blank">LAMBDA</a>
@@ -539,7 +539,7 @@
       <div class="vacancy-content-wrap">
       <!-- Вакансия 1 -->
         <div class="vacancy-title">ML/Data Scientist (эксперт по компьютерному зрению)</div>
-        <div class="vacancy-content">
+        <div class="vacancy-content" style="text-align:justify;">
           <b>Где:</b> lambda ВШЭ <br>
           <b>Задачи:</b>
           <ul>
@@ -566,7 +566,7 @@
       <div class="vacancy-content-wrap">
         <!-- Вакансия 2 -->
         <div class="vacancy-title">ML/DL Исследователь</div>
-        <div class="vacancy-content">
+        <div class="vacancy-content" style="text-align:justify;">
           <b>Где:</b> lambda ВШЭ <br>
           <b>Задачи:</b>
           <ul>
@@ -592,7 +592,7 @@
       <div class="vacancy-content-wrap">
         <!-- Вакансия 3 -->
         <div class="vacancy-title">ML/DL Исследователь</div>
-        <div class="vacancy-content">
+        <div class="vacancy-content" style="text-align:justify;">
           <b>Где:</b> lambda ВШЭ<br>
           <b>Задачи:</b>
           <ul>
