--- a/index.html
+++ b/index.html
@@ -413,15 +413,15 @@
     font-weight: 700;
     color: var(--accent);
     letter-spacing: 2px;
-    /* ... остальное как было ... */
+    
     }
     .logo-icon {
-      width: 38px;  /* или размер, который вам нужен */
+      width: 38px;  
       height: 38px;
       margin-right: 12px;
-      border-radius: 9px; /* если нужна скруглённость */
-      box-shadow: 0 1px 5px #d2d2d2; /* если хотите легкую тень */
-      background: #fff; /* опционально */
+      border-radius: 9px; 
+      box-shadow: 0 1px 5px #d2d2d2; 
+      background: #fff; 
     }
 
     .advantages-flex {
@@ -430,7 +430,26 @@
     align-items: center;
     justify-content: space-between;
     }
-
+    @media (max-width: 800px) {
+    .section {
+      padding: 20px 8px 14px 8px;
+    }
+    .projects-row {
+      flex-direction: column;
+      gap: 15px;
+    }
+    .project-card {
+      max-width: 99vw;
+      min-width: 0;
+    }
+    .advantages-flex {
+      flex-direction: column;
+      gap: 18px;
+    }
+    .future-img, .future-content {
+      max-width: 100%;
+    }
+    }
     @media (max-width: 800px) {
       .advantages-flex {
         flex-direction: column;
@@ -516,7 +535,7 @@
         <div class="hero-title">
           Мультидисциплинарная команда исследователей<br>— создаём ИИ-продукты для здравоохранения
         </div>
-        <div class="hero-desc">
+        <div class="hero-desc" style="text-align:justify;">
           <b>TensorLabs</b> — стартап, который объединяет специалистов в медицине, ИИ и инженерии для создания технологий, реально улучшающих жизнь людей.<br>
           Наша цель — превратить современные научные открытия в практические решения для ранней диагностики и мониторинга здоровья.
         </div>
@@ -530,14 +549,14 @@
         <div class="problem-flex">
           <div class="problem-content">
             <div class="section-title">Зачем это нужно?</div>
-            <div class="section-content">
+            <div class="section-content" style="text-align:justify;">
               <b>Сердечно-сосудистые заболевания — основная причина смертности в мире.</b><br>
               Ранняя диагностика позволяет спасти тысячи жизней, но современная медицина не всегда даёт быстрые и доступные решения.<br>
-              Ишемическая болезнь сердца (ИБС) по-прежнему занимает первое место среди причин смертности и долгосрочной потери трудоспособности при сердечно-сосудистых заболеваниях во всем мире 1. 
+              Ишемическая болезнь сердца (ИБС) по-прежнему занимает первое место среди причин смертности и долгосрочной потери трудоспособности при сердечно-сосудистых заболеваниях во всем мире. 
               Для эффективного скрининга ИБС крайне востребованы точные, простые в применении и экономичные методы. 
 
               <br>
-              <b>Наш подход:</b> применяем компьютерное зрение и ИИ для диагностики по доступным изображениям. Выявляем признаки, оцениваем риск, направляем и соправаждаем пацинта с постоперационным контролем.
+              <b>Наш подход:</b> применяем компьютерное зрение и ИИ для диагностики по доступным изображениям. Выявляем признаки, оцениваем риск, направляем и сопровождаем пациента с постоперационным контролем.
             </div>
           </div>
           <div class="problem-img">
@@ -607,7 +626,7 @@
             </div>
             <div class="future-content">
               <div class="section-title">Видение будущего</div>
-              <div class="section-content">
+              <div class="section-content" style="text-align:justify;">
                 <b>TensorLabs</b> разрабатывает новые технологии, которые позволят увеличить продолжительность комфортной жизни пациентов, а врачам сократить время работы и повысить её качество.<br>
                 <ul>
                   <li>Сбор и анализ биомедицинских данных в реальном времени</li>
