--- a/news.html
+++ b/news.html
@@ -512,9 +512,9 @@
       <a href="career.html">Карьера</a>
     </nav>
     <div class="lang-switch">
-        <a href="index.html" class="lang-link">RU</a>
+        <a href="news.html" class="lang-link">RU</a>
         <span class="lang-divider">|</span>
-        <a href="en.html" class="lang-link">EN</a>
+        <a href="en_news.html" class="lang-link">EN</a>
     </div>
     <!--<button class="header-btn">Связаться</button>1 -->
   </header>
