--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>Проекты — TensorLabs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css"> <!-- если стили вынесены отдельно -->
+  <link rel="stylesheet" href="style.css"> 
   <style>
-    /* Если стили не в отдельном файле, добавь их сюда */
+
     :root {
       --main-bg: #f7f8fb;
       --header-bg: #fff;
@@ -536,9 +536,9 @@
       <a href="career.html">Карьера</a>
     </nav>
     <div class="lang-switch">
-        <a href="index.html" class="lang-link">RU</a>
+        <a href="projects.html" class="lang-link">RU</a>
         <span class="lang-divider">|</span>
-        <a href="en.html" class="lang-link">EN</a>
+        <a href="en_projects.html" class="lang-link">EN</a>
     </div>
     <!--<button class="header-btn">Связаться</button>1 -->
   </header>
@@ -553,16 +553,16 @@
         </div>
         <div class="project-block-content">
           <div class="project-block-title">Диагностика ИБС по фотографии лица</div>
-          <div class="project-block-desc">
+          <div class="project-block-desc" style="text-align:justify;">
             
             Помимо распространённых прогностических моделей, построенных на традиционных клинических факторах риска [1–2], некоторые внешние черты лица также оказались связаны с повышенной вероятностью развития ИБС, что открывает новые возможности для скрининга данной патологии [3]. 
-            Например, такие признаки, как облысение, седина, морщины на лице, складка мочки уха, ксантелазмы и дуга роговицы были ассоциированы с более высоким риском ИБС и ухудшением состояния сердечно-сосудистой системы【4–6】. 
+            Например, такие признаки, как облысение, седина, морщины на лице, складка мочки уха, ксантелазмы и дуга роговицы были ассоциированы с более высоким риском ИБС и ухудшением состояния сердечно-сосудистой системы[4–6]. 
             Ряд исследований также продемонстрировал, что подобные особенности внешности могут быть полезны для выявления ИБС и даже повышать точность традиционных моделей прогноза.
             Недавно подобное исследования были проведены в китае и показали впечатлющие результаты. [7]
             Наша цель: Разработка алгоритма для выявления риска ишемической болезни сердца на основании анализа фото лица пациента.<br>
             Особенности: клиническое тестирование, открытые публикации, масштабируемая архитектура.
           </div>
-          <div class="project-block-refs">
+          <div class="project-block-refs" style="text-align:justify;">
             <b>Литература:</b>
             <ul>
               <li>[1].Peter WF, Ralph BD, Daniel L, Belanger AM, Silbershatz H, Kannel WB. Prediction of coronary heart disease using risk factor categories. <i>Circulation</i>, 1998.</li>
@@ -585,13 +585,13 @@
         </div>
         <div class="project-block-content">
           <div class="project-block-title">ИИ для анализа глазного дна</div>
-          <div class="project-block-desc">
-            Изучение состояния сосудов сетчатки глаза давно используется врачами для оценки риска сердечно-сосудистых заболеваний (ССЗ), поскольку изменения в сосудах сетчатки, например, сужение артериол, отражают патологии в других сосудистых областях организма, включая мозг и сердце[1-2]. 
-            С развитием цифровой офтальмологии и автоматизированных методов анализа стало возможным более точно и объективно измерять калибр сосудов, что позволило выявить их тесную связь с традиционными факторами риска ССЗ и даже предсказывать будущие неблагоприятные события, такие как инфаркт или инсульт[1-2].
+          <div class="project-block-desc" style="text-align:justify;">
+            Изучение состояния сосудов сетчатки глаза давно используется врачами для оценки риска сердечно-сосудистых заболеваний (ССЗ), поскольку изменения в сосудах сетчатки, например, сужение артериол, отражают патологии в других сосудистых областях организма, включая мозг и сердце [1-2]. 
+            С развитием цифровой офтальмологии и автоматизированных методов анализа стало возможным более точно и объективно измерять калибр сосудов, что позволило выявить их тесную связь с традиционными факторами риска ССЗ и даже предсказывать будущие неблагоприятные события, такие как инфаркт или инсульт [1-2].
             Использование глубокого обучения для анализа фотографий глазного дна уже доказало свою эффективность в выявлении ряда заболеваний [3][4]. 
             Такой подход обеспечивает быстрый, недорогой и воспроизводимый способ скрининга, что делает его весьма перспективным для массовых исследований и клинического применения. 
           </div>
-          <div class="project-block-refs">
+          <div class="project-block-refs" style="text-align:justify;">
             <b>Литература:</b>
             <ul>
               <li>[1].Wong, T. Y. et al. Retinal arteriolar narrowing and risk of coronary heart disease in men and women. The atherosclerosis risk in communities study. <i> JAMA</i>, 2002.</li>
@@ -611,7 +611,7 @@
         </div>
         <div class="project-block-content">
           <div class="project-block-title">Цифровой ассистент поддержкий для врача</div>
-          <div class="project-block-desc">
+          <div class="project-block-desc" style="text-align:justify;">
             Эффективный постоперационный контроль состояния пациентов — важнейший этап современного медицинского наблюдения. 
             Своевременное выявление осложнений или негативной динамики позволяет быстро скорректировать лечение, предупредить тяжёлые последствия и снизить риск повторной госпитализации. 
             Однако традиционный подход с регулярными телефонными обзвонами требует значительных временных ресурсов от врачей и среднего медицинского персонала, особенно при большом количестве пациентов.
@@ -619,7 +619,7 @@
             Такой ИИ-ассистент может работать по чёткому протоколу, не забывает задать важные вопросы и способен выявить даже неочевидные риски с учётом истории болезни. 
             Это позволяет врачу сосредоточиться на более сложных и критических случаях, повысить качество и персонализацию постоперационного контроля, а также экономит значительное количество времени, снижая нагрузку на медицинский персонал. [3]
           </div>
-          <div class="project-block-refs">
+          <div class="project-block-refs" style="text-align:justify;">
             <b>Литература:</b>
             <ul>
               <li>[1].Arun Babu и Sekhar Babu Boddu. «BERT-Based Medical Chatbot: Enhancing Healthcare Communication through Natural Language Understanding». <i>Exploratory Research in Clinical and Social Pharmacy</i>, 2024.</li>
@@ -639,7 +639,7 @@
         </div>
         <div class="project-block-content">
           <div class="project-block-title">Физика материалов и молекул в ВШЭ</div>
-          <div class="project-block-desc">
+          <div class="project-block-desc" style="text-align:justify;">
             Большие языковые модели показали впечатляющие способности в решении большого числа задач, но всё ещё есть проблемы в их использовании в естественно-научном направлении. [1]
             В нашем проекте мы планируем - адаптировать и изучить поведение LLMs, для задач генерации структур на атомарном уровне для решения физико-химических задач. 
             Одна из больших проблем в области генеративных моделей - это ограниченное количество данных, особенно экспериментальных [2]. Помимо проблемы недостатка данных, выбор метода представления материалов не однозначен и зависит от выбанного подхода. 
@@ -648,7 +648,7 @@
             В случае кристаллов стоит уделить особое внимание оптическим свойствам и низкоразмерным структурам, таким как двумерные материалы. Они в данный момент не полностью изучены, а их число с каждым годом только растет.  
             Двумерные материалы [6] являются очень перспективными с точки зрения приложений, из-за своих уникальных свойств и размеров, кроме этого низкоразмерные материалы на основе двумерных относительно легко сконструировать экспериментально.
           </div>
-          <div class="project-block-refs">
+          <div class="project-block-refs" style="text-align:justify;">
             <b>Литература:</b>
             <ul>
               <li>[1].Antunes, L.M., Butler, K.T. and Grau-Crespo, R., Crystal structure generation with autoregressive large language modeling.  <i>Nature Communications</i>, 2024.</li>
@@ -669,7 +669,7 @@
         </div>
         <div class="project-block-content">
           <div class="project-block-title">Прикладной ML в в ВШЭ</div>
-          <div class="project-block-desc">
+          <div class="project-block-desc" style="text-align:justify;">
             Коронарная болезнь сердца (КБС) остаётся одной из ведущих причин смертности и заболеваемости во всём мире, в том числе в России, где на неё приходится более половины всех случаев сердечно-сосудистых заболеваний. 
             Несмотря на успехи медицины, эффективная диагностика и лечение КБС остаются приоритетной задачей для здравоохранения. 
             Современные методы визуализации, такие как коронарография, обеспечивают врачу огромный объём информации для принятия клинических решений, однако растущий поток данных требует значительных ресурсов для обработки и интерпретации. 
@@ -679,7 +679,7 @@
             В проекте предполагается разработка многоэтапной платформы для всесторонней оценки состояния коронарных сосудов, включая сегментацию артерий [2], построение трёхмерных моделей [3-5], моделирование гемодинамики и автоматический расчёт риска ишемических событий на основе полученных данных. 
             Такой комплексный подход позволит не только повысить точность диагностики КБС, но и оптимизировать затраты на лечение, что делает его весьма актуальным и практически реализуемым направлением для медицины будущего.
           </div>
-          <div class="project-block-refs">
+          <div class="project-block-refs" style="text-align:justify;">
             <b>Литература:</b>
             <ul>
               <li>[1].Khelimskii, D., Badoyan, A., Krymcov, O., Baranov, A., Manukian, S. and Lazarev, M., AI in interventional cardiology: Innovations and challenges. <i>Heliyon</i>, 2024.</li>
